--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Microservice For Handling Flight CRUD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "npx nodemon src/server.js"
   },
   "author": "Akash",
   "license": "ISC",
