--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Microservice For Handling Flight CRUD",
   "main": "index.js",
   "scripts": {
-    "start" : "npx nodemon src/server.js"
+    "start": "npx nodemon src/server.js"
   },
   "author": "Akash",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
